# teide

./: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  LICENSE  MANIFEST.in  README.md  SPEC.md  bench_duckdb.py  bench_gen_parted.py  bench_interactive.py  bench_join.py  bench_join_duckdb.py  bench_query_parted.py  bench_run.py  bench_sort.py  bench_sort_duckdb.py  bench_window.py  bench_window_duckdb.py  gen_500m.py  pyproject.toml  test_crash.c
.claude/: settings.local.json
.github/workflows/: wheels.yml
bindings/python/: example.py  examples.py  teide_adapter.py
bindings/python/teide/: __init__.py  api.py
bindings/rust/src/: lib.rs
build-audit/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-audit/Testing/Temporary/: CTestCostData.txt
crates/teide/: Cargo.toml
crates/teide-cli/: Cargo.toml  build.rs
crates/teide-cli/src/: completer.rs  helper.rs  highlighter.rs  main.rs  prompt.rs  theme.rs  validator.rs
crates/teide-db/: Cargo.toml
crates/teide-db/src/: expr.rs  lib.rs  planner.rs
crates/teide-db/tests/: sql.rs
crates/teide-sql/: Cargo.toml
crates/teide-sql/src/: expr.rs  lib.rs  planner.rs
crates/teide-sql/tests/: sql.rs
crates/teide-sys/: Cargo.toml  build.rs
crates/teide-sys/src/: lib.rs
crates/teide/src/: lib.rs
crates/teide/tests/: integration.rs
docs/: index.html  script.js  style.css
docs/plans/: 2025-02-10-sql-repl-design.md  2026-02-13-architecture-redesign.md  2026-02-13-rich-repl-design.md  2026-02-15-ondisk-phase2-plan.md  2026-02-15-ondisk-phase3-plan.md  2026-02-15-ondisk-tables-design.md  2026-02-16-pgwire-impl-plan.md  2026-02-16-pgwire-server-design.md  2026-02-17-c-optimizer-roadmap.md  2026-02-19-mirador-design.md  2026-02-19-mirador-impl-plan.md
include/teide/: td.h
mirador/: pyproject.toml
mirador/frontend/: index.html  package-lock.json  package.json
mirador/frontend/src/: App.css  App.tsx  index.css
mirador/frontend/src/api/: client.ts
mirador/frontend/src/components/: Canvas.tsx  CodeEditor.tsx  ConfirmDialog.tsx  FileBrowser.tsx  Inspector.tsx  NavBar.tsx  NodePalette.tsx  PipelineNode.tsx  PreviewPanel.tsx  Sidebar.tsx  Toolbar.tsx  icons.tsx
mirador/frontend/src/components/dashboard/: BarChartWidget.tsx  LineChartWidget.tsx  PieChartWidget.tsx  StatCardWidget.tsx  TableWidget.tsx  WidgetCard.tsx  WidgetConfigPanel.tsx
mirador/frontend/src/pages/: DashboardEditorPage.tsx  DashboardListPage.tsx  WorkflowEditorPage.tsx  WorkflowListPage.tsx
mirador/frontend/src/store/: useStore.ts
mirador/mirador/: __init__.py  app.py
mirador/mirador/api/: dashboards.py  files.py  nodes.py  pipelines.py  projects.py  ws.py
mirador/mirador/engine/: executor.py  registry.py
mirador/mirador/frontend_dist/: index.html
mirador/mirador/frontend_dist/assets/: index-5Sv7V9MI.css  index-BXFxf8Ex.js  index-CFtl_JXI.js  index-CGJ6-ixm.js  index-DZhKz6zw.css
mirador/mirador/nodes/: base.py
mirador/mirador/nodes/compute/: filter.py  formula.py  groupby.py  join.py  query.py  sort.py
mirador/mirador/nodes/generic/: ai.py  conditional.py  dict_transform.py  gmail.py  google_drive.py  script.py
mirador/mirador/nodes/inputs/: csv_source.py
mirador/mirador/nodes/outputs/: chart.py  export.py  grid.py  pdf_render.py
mirador/mirador/storage/: projects.py
mirador/mirador_data/projects/h2o_benchmark_demo/dashboards/: h2o_overview.json
mirador/mirador_data/projects/h2o_benchmark_demo/pipelines/: analytics_demo.json
mirador/tests/: conftest.py  test_api_pipelines.py  test_compute_nodes.py  test_csv_node.py  test_executor.py  test_generic_nodes.py  test_grid_node.py  test_health.py  test_output_nodes.py  test_projects.py  test_registry.py  test_sort_join_nodes.py  test_ws.py
py/: pyproject.toml
py/teide/: __init__.py  api.py
rs/: Cargo.toml  build.rs
rs/benches/: h2oai.rs
rs/src/: engine.rs  ffi.rs  lib.rs
rs/src/cli/: completer.rs  highlighter.rs  main.rs  prompt.rs  theme.rs  validator.rs
rs/src/server/: catalog.rs  encode.rs  handler.rs  main.rs  mod.rs  types.rs
rs/src/sql/: expr.rs  mod.rs  planner.rs
rs/tests/: integration.rs  server.rs  slt_runner.rs  sql.rs
rs/tests/slt/: agg_filter.slt  aggregate.slt  basic.slt  ddl.slt  functions.slt  insert.slt  join.slt  nulls_order.slt  regressions.slt  set_ops.slt  sort.slt  stats.slt  subquery.slt  types.slt  where.slt  window.slt
sql/: bench_parted_queries.sql  bench_parted_sql.sh  create_parted.py  create_parted_bench.sh  query_parted.py
src/core/: block.c  block.h  err.c  err.h  platform.c  platform.h  types.c  types.h
src/df/: df.c  df.h  sym.h
src/io/: csv.c  csv.h
src/mem/: arena.c  arena.h  buddy.c  buddy.h  cow.c  cow.h  heap.c  heap.h  sys.c  sys.h
src/ops/: exec.c  exec.h  fuse.c  fuse.h  graph.c  graph.h  hash.h  morsel.c  morsel.h  opt.c  opt.h  pipe.c  pipe.h  plan.c  plan.h  pool.c  pool.h
src/store/: col.c  col.h  meta.c  meta.h  part.c  part.h  splay.c  splay.h
src/table/: sym.c  sym.h  table.c  table.h
src/vec/: atom.c  atom.h  list.c  list.h  sel.c  str.c  str.h  vec.c  vec.h
test/: munit.c  munit.h  test_api.py  test_atom.c  test_block.c  test_buddy.c  test_cow.c  test_df.c  test_err.c  test_graph.c  test_list.c  test_main.c  test_morsel.c  test_pool.c  test_store.c  test_str.c  test_sym.c  test_table.c  test_vec.c
