[build-system]
requires = ["scikit-build-core>=0.5"]
build-backend = "scikit_build_core.build"

[project]
name = "teide"
version = "0.1.0"
description = "Fast columnar dataframe library for Python, powered by a zero-dependency C17 engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "Teide Contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/teide-project/teide"
Issues = "https://github.com/teide-project/teide/issues"

[tool.scikit-build]
wheel.packages = ["bindings/python/teide"]
cmake.build-type = "Release"
cmake.args = ["-DTEIDE_PORTABLE=ON"]
