[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "teide"
version = "0.2.0"
description = "Fast columnar computation engine for Python"
license = "MIT"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
