[package]
name = "teide"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/singaraiona/teide"
description = "Fast columnar computation engine powered by a zero-dependency C17 core"
readme = "../README.md"
keywords = ["dataframe", "columnar", "analytics"]
categories = ["database", "science"]
links = "teide"

[features]
default = []
cli = ["reedline", "clap", "nu-ansi-term"]
server = ["tokio", "pgwire", "async-trait", "futures", "clap"]

[dependencies]
sqlparser = { version = "0.53", features = ["visitor"] }

[dependencies.reedline]
version = "0.45"
optional = true

[dependencies.clap]
version = "4"
features = ["derive"]
optional = true

[dependencies.nu-ansi-term]
version = "0.50"
optional = true

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "net", "macros", "signal"]
optional = true

[dependencies.pgwire]
version = "0.38"
optional = true

[dependencies.async-trait]
version = "0.1"
optional = true

[dependencies.futures]
version = "0.3"
optional = true

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
sqllogictest = "0.29"
tokio-postgres = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }

[build-dependencies]
cc = "1"

[[bin]]
name = "teide"
path = "src/cli/main.rs"
required-features = ["cli"]

[[bin]]
name = "teide-server"
path = "src/server/main.rs"
required-features = ["server"]

[[bench]]
name = "h2oai"
harness = false
