[package]
name = "teide-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQL REPL for the Teide dataframe engine"

[[bin]]
name = "teide"
path = "src/main.rs"

[dependencies]
teide-db = { path = "../teide-db" }
teide = { path = "../teide" }
reedline = "0.45"
nu-ansi-term = "0.50"
clap = { version = "4", features = ["derive"] }
